# sentiment-analysis-transformer

./: .gitignore  README.md  config.py  pyproject.toml  test_component.ipynb
data/: dataset.py  download_imdb.py  vocab.pkl
scripts/: evaluate.py  inference.py  prepare_data.py  train.py
src/components/: attention.py  encoder_layer.py  feedforward.py  multihead.py  positional.py  transformer_encoder.py
src/models/: classifier.py
src/utils/: vocab.py
