[project]
name = "sentiment-analysis-transformer"
version = "0.1.0"
authors = [
    {name = "Cheick Tidiani Cissé", email = "tidianicisse@gmail.com"}
]
description = "Sentiment Analysis using Transformer from Scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.6.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pip>=25.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.66.5",
]


[tool.uv.sources]
torch = { index = "pytorch" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
